--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: url("imagens/SPFvT.gif");
+    background-image: url("imagens/81316ddad3b3dc3b8a1151c0302629af.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
